--- a/index.html
+++ b/index.html
@@ -253,7 +253,8 @@
 				<h2 class="major">Fale conosco: </h2>
 				<ul>
 					<li><a class="zap negrito" href="https://wa.me/+5511917296616">WhatsApp</a></li>
-					<li>E-mail - contato@grupoinove.srv.br</li>
+					<li>E-mail - contato@grupoinove.srv.br <br>
+						E-mail - igor@alvesadvocacia.srv.br</li>
 				</ul>
 
 				<ul class="icons">
